--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ main {
 .services,
 .contacts {
     border: 1px solid #ccc;
-    padding: 20px;
+    padding: 30px;
     border-radius: 20px;
 }
 
@@ -182,7 +182,8 @@ main {
 .team .member img {
     width: 70px;
     height: 70px;
-    margin-right: 10px;
+    margin-right: 20px;
+    margin-left: 20px;
     border-radius: 50px;
 }
 
