--- a/style.css
+++ b/style.css
@@ -90,6 +90,11 @@ main {
     text-align: center;
 }
 
+main h2 {
+    padding-top: 10px;
+    font-size: 1.7em;
+}
+
 .story p {
     text-align: right;
     font-size: small;
@@ -115,7 +120,7 @@ main {
     display: block;
     object-fit: cover;
     border-radius: 20px;
-    transition: transform 0.3s ease;
+    transition: transform 1.9s ease;
     height: 400px;
 }
 
@@ -138,7 +143,7 @@ main {
 }
 
 .featured-pet:hover .image-block img {
-    transform: scale(1.05);     /* Hover effect */
+    transform: scale(1.5);     /* Hover effect */
 }
 
 .highlights,
@@ -171,6 +176,14 @@ main {
     object-fit: cover;
 }
 
+.stories p {
+    padding-left: 20px;
+}
+
+.member p {
+    padding-right: 20px;
+}
+
 .stories .story,
 .team .member {
     display: flex;
@@ -180,18 +193,16 @@ main {
 
 .stories .story img,
 .team .member img {
-    width: 70px;
-    height: 70px;
-    margin-right: 20px;
-    margin-left: 20px;
+    width: 80px;
+    height: 80px;
     border-radius: 50px;
 }
 
 .thanks {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: bolder;
+    font-size:larger;
 }
-
 
 /* Contact Form Style */
 #contact-container {
@@ -205,11 +216,6 @@ main {
     display: block;
     float: left;
 }
-
-
-
-
-
 
 
 
@@ -284,6 +290,8 @@ main {
         height: 50px;
     }
 }
+
+
 
 
 @media (min-width: 540px) and (max-width: 991px) {
