--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /* General Styling */
 
-body {
+html, body {
     font-family: sans-serif;
     margin: 0;
-    padding: 0;
+    padding-bottom: 40px;
     align-content: center;
     text-align: center;
     display: flex;
@@ -35,7 +35,7 @@ header {
     top: 0;
     z-index: 100;
     transition: background-color 0.3s ease, box-shadow 0.3s ease;
-    /* Smooth transitions */
+    
 
 }
 
@@ -46,8 +46,9 @@ footer {
     text-align: center;
     height: 40px;
     width: 100%;
-    
-}
+    bottom: 0;
+    position: fixed;
+   }
 
 .navbar {
     width: 100%;
@@ -335,8 +336,17 @@ main .button:hover {
 .pet-container {
     display: grid;
     grid-gap: 20px;
-    margin-bottom: 20px;
 }
+
+
+
+
+/* Services Page Style */
+.market {
+    display: flex;
+    flex: 1;
+}
+
 
 
 /* FAQs Page Style */
@@ -413,36 +423,33 @@ font-family: "Merienda", cursive;
 /* Media Queries */
 
 
-  /* XS Phone */
+/* XS Phone */
 @media (min-width: 300px) and (max-width: 430px) {
-    main {
+    .pet-container {
         grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: auto;
         grid-gap: 10px;
+    }
+    
+    .pet-box {
         padding: 10px;
-        flex: 1;
-        padding: 20px;
+        font-size: 0.85em;
+        margin: 5px;
+    }
+    
+    .pet-box img {
+        margin-bottom: 5px;
+    }
+    
+    .pet-box h3 span.age {
+        margin: 5px;
+        font-size: 0.75em;
+    }
+    
+    .pet-box h3 {
+        font-size: 1.5em;
     }
 
-    .featured-pet {
-        grid-column: 1 / -1;
-    }
-
-    .featured-pet .image-block img {
-        height: 300px;
-        object-fit: cover;
-    }
-
-    .featured-pet .details {
-        font-size: 0.70em;
-        color: white;
-        top: 90%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 90%;
-        text-align: center;
-    }
-
-    .highlights,
     .adoption,
     .details,
     .stories,
