--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /* General Styling */
 
-html, body {
+html,
+body {
     font-family: sans-serif;
     margin: 0;
     padding-bottom: 40px;
@@ -35,7 +36,7 @@ header {
     top: 0;
     z-index: 100;
     transition: background-color 0.3s ease, box-shadow 0.3s ease;
-    
+
 
 }
 
@@ -48,7 +49,7 @@ footer {
     width: 100%;
     bottom: 0;
     position: fixed;
-   }
+}
 
 .navbar {
     width: 100%;
@@ -106,36 +107,6 @@ main p {
     font-weight: bold;
 }
 
-
-
-/* Highlights */
-.note {
-font-style: italic;
-font-weight: bold;
-font-family: "Merienda", cursive;
-font-size: .9em;
-}
-
-.highlights p {
-    font-size: small;
-}
-
-/* Store Hours */
-.details p {
-    margin: auto;
-}
-.story p {
-    text-align: right;
-    font-size: small;
-}
-
-.member p {
-    text-align: left;
-    font-size: small;
-}
-
-
-
 /* Header Image  */
 .featured-pet {
     grid-column: 1 / -1;
@@ -145,7 +116,7 @@ font-size: .9em;
 }
 
 .featured-pet .image-block img {
-     width: 100%;
+    width: 100%;
     display: block;
     object-fit: cover;
     border-radius: 20px;
@@ -156,11 +127,12 @@ font-size: .9em;
 .featured-pet .details {
     position: absolute;
     top: 80%;
-    left: 75%;
+    left: 72%;
     transform: translate(-50%, -50%);
     width: 50%;
     color: black;
-    font-family: "Merienda", cursive;    box-sizing: content-box;
+    font-family: "Merienda", cursive;
+    box-sizing: content-box;
     text-align: right;
     border: none;
 }
@@ -171,7 +143,8 @@ font-size: .9em;
 }
 
 .featured-pet:hover .image-block img {
-    transform: scale(1.5);     /* Hover effect */
+    transform: scale(1.5);
+    /* Hover effect */
 }
 
 .highlights,
@@ -205,6 +178,37 @@ font-size: .9em;
 }
 
 
+/* Highlights */
+.note {
+    font-style: italic;
+    font-weight: bold;
+    font-family: "Merienda", cursive;
+    font-size: .9em;
+}
+
+.highlights p {
+    font-size: small;
+}
+
+/* Store Hours */
+.details p {
+    margin: auto;
+}
+
+.story p {
+    text-align: right;
+    font-size: small;
+}
+
+.member p {
+    text-align: left;
+    font-size: small;
+}
+
+
+
+
+
 
 /* Member & Customer Styles */
 .stories p {
@@ -232,7 +236,7 @@ font-size: .9em;
 .thanks {
     font-family: "Merienda", cursive;
     font-weight: bolder;
-    font-size:larger;
+    font-size: larger;
 }
 
 /*  Button Style */
@@ -246,7 +250,7 @@ main .button {
 
 main .button:hover {
     background-color: rgb(140, 185, 140);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     text-decoration: none;
 }
 
@@ -272,7 +276,7 @@ main .button:hover {
 
 .Letter img {
     border-radius: 40px !important;
-   
+
     margin: 20px;
     align-self: center;
     max-width: 100%;
@@ -355,7 +359,7 @@ main .button:hover {
     padding-top: 30px;
     width: 80%;
     margin: auto;
-    
+
     font-size: smaller;
 }
 
@@ -366,8 +370,8 @@ main .button:hover {
 }
 
 .faq-container h2 {
-font-weight: bold;
-font-family: "Merienda", cursive;
+    font-weight: bold;
+    font-family: "Merienda", cursive;
 
 }
 
@@ -382,7 +386,7 @@ font-family: "Merienda", cursive;
     font-weight: bold;
     display: flex;
     justify-content: space-between;
-    
+
 
 }
 
@@ -425,37 +429,50 @@ font-family: "Merienda", cursive;
 
 /* XS Phone */
 @media (min-width: 300px) and (max-width: 430px) {
+    .featured-pet details {
+        position: absolute;
+        top: 80%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 50%;
+        color: white;
+        box-sizing: content-box;
+        text-align: center;
+        border: none;
+    }
+
     .pet-container {
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: auto;
         grid-gap: 10px;
     }
-    
+
     .pet-box {
         padding: 10px;
         font-size: 0.85em;
         margin: 5px;
     }
-    
+
     .pet-box img {
         margin-bottom: 5px;
     }
-    
+
     .pet-box h3 span.age {
         margin: 5px;
         font-size: 0.75em;
     }
-    
+
     .pet-box h3 {
         font-size: 1.5em;
     }
+
 
     .adoption,
     .details,
     .stories,
     .team,
     .thanks,
-    .faqs, 
+    .faqs,
     .services,
     .contacts {
         padding: 10px;
@@ -466,7 +483,7 @@ font-family: "Merienda", cursive;
     .stories .story img,
     .team .member img,
     .thanks img,
-    .services img, 
+    .services img,
     .contacts img {
         height: 150px;
     }
@@ -492,38 +509,40 @@ font-family: "Merienda", cursive;
         height: 80vh;
         width: 80vw;
         align-self: center;
-        
+
     }
 }
 
 
-  /* Phone */
+/* Phone */
 @media (max-width: 767px) {
-  
+
     .pet-container {
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: auto;
         grid-gap: 10px;
     }
-    
+
     .pet-box {
         padding: 10px;
         font-size: 0.85em;
         margin: 5px;
     }
-    
+
     .pet-box img {
         margin-bottom: 5px;
     }
-    
+
     .pet-box h3 span.age {
         margin: 5px;
         font-size: 0.75em;
     }
-    
+
     .pet-box h3 {
         font-size: 1.5em;
     }
+
+
 
     #contact-container {
         height: 80vh;
@@ -535,48 +554,48 @@ font-family: "Merienda", cursive;
 
 
 
-  /* Tablet and Desktop */
+/* Tablet and Desktop */
 @media (min-width: 768px) {
- 
+
     .pet-container {
         grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
         /* Responsive columns */
         grid-template-rows: auto;
         grid-gap: 20px;
     }
-    
+
     .pet-box {
         padding: 20px;
         font-size: 0.9em;
         margin: 10px;
     }
-    
+
     .pet-box img {
         margin-bottom: 10px;
     }
-    
+
     .pet-box h3 span.age {
         margin: 15px;
         font-size: 0.7em;
     }
-    
+
     .pet-box h3 {
         font-size: 1.5em;
     }
-    
-    
-    }
+
+
+}
 
 
 
- /* Tablet */
+/* Tablet */
 @media (min-width: 768px) and (max-width: 1180px) {
     main {
         grid-template-columns: repeat(2, 1fr);
         /* 2 columns on tablets */
         flex: 1;
         padding: 20px;
-            }
+    }
 
     .featured-pet .image-block img {
         height: 350px;
@@ -597,15 +616,14 @@ font-family: "Merienda", cursive;
         height: 400px;
     }
 
-    #contact-container  {
+    #contact-container {
         display: block;
         flex: 1;
         align-items: left !important;
         height: 80vh;
-        
-       
-        
+
+
+
 
     }
 }
-
